        executable. 

30. (Roger Kumpf - HP) 19 Mar 2002 - Added range checking for Uint* and
    Sint* values in XmlReader.cpp.  Previously, values that were out of
    range were simply truncated to fit the given integer size.  An
    exception is now thrown when the given string can not be parsed into
    an integer of the specified size.

-------------------------------------------------------------------
Version 1.06 working towards 1.1 Started 13 December 2001

1. Merged back to Main branch.  All general development will be in main branch 
       in the future with releases in side branches. Special side developments
       may temporarily be in side branches.
       Changed cimversion to 1.06.  We will do 1.1 based on functionality.
       
2. (Karl) 18 December 2001 - Added new directory repositories where repository 
	implementations will be kept to separate them from the 
	repository interface defintion. Initial implementation is genericfile
	which is the current file based repository.
	
	Added new build variable RMREPOSITORY which is a generic MAKE command
	to remove an existing repository.  It simply substitutes for the RMDIRHIER
	command at this point but we will make this a generic part of system
	in the future.

3. (Roger Kumpf - HP) 18 Dec 2001 - Updated the CIMOperationRequestDecoder
   to check that all required parameters for intrinsic methods are
   present.  If a required parameter is missing, a CIM_ERR_INVALID_PARAMETER
   exception is thrown.  Also added checks for duplicate parameters in the
   intrinsic methods.  If a parameter is specified more than once, a
   CIM_ERR_INVALID_PARAMETER exception is thrown.

4. (Nag Boranna - HP) 14 Jan 2002 - Created CIMOperationRequestAuthorizer queue
   and moved Authorization verification code from CIMOperationRequestDecoder
   queue to this new queue. Modified CIMServer.cpp to create
   CIMOperationRequestAuthorizer queue only when authorization is enabled.